--- a/app/src/main/res/layout/activity_bike_details.xml
+++ b/app/src/main/res/layout/activity_bike_details.xml
@@ -77,69 +77,32 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <!-- Image Container -->
-            <LinearLayout
-                android:id="@+id/cardImage"
+            <!-- Image Slider Container -->
+            <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="256dp"
                 android:layout_marginHorizontal="@dimen/padding_medium"
                 android:layout_marginTop="@dimen/padding_medium"
-                android:background="@color/gray_200"
-                android:orientation="vertical"
-                android:elevation="2dp">
+                android:background="@color/gray_200">
 
-                <RelativeLayout
+                <!-- ViewPager2 for Image Slider -->
+                <androidx.viewpager2.widget.ViewPager2
+                    android:id="@+id/imageViewPager"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="match_parent" />
 
-                    <!-- Bike Image - THIS IS THE FIXED LINE -->
-                    <ImageView
-                        android:id="@+id/ivBikeImage"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:scaleType="centerCrop"
-                        android:contentDescription="Bike Image" />
+                <!-- Dots Indicator -->
+                <LinearLayout
+                    android:id="@+id/dotsIndicator"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:gravity="center"
+                    android:layout_gravity="center_horizontal|bottom"
+                    android:layout_marginBottom="16dp"
+                    android:padding="8dp" />
 
-                    <!-- Image Dots Indicator -->
-                    <LinearLayout
-                        android:id="@+id/dotsIndicator"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:layout_centerHorizontal="true"
-                        android:layout_alignParentBottom="true"
-                        android:layout_marginBottom="16dp"
-                        android:gravity="center"
-                        android:paddingVertical="4dp"
-                        android:paddingHorizontal="8dp"
-                        android:background="@drawable/bg_dots_indicator">
-
-                        <View
-                            android:id="@+id/dot1"
-                            android:layout_width="8dp"
-                            android:layout_height="8dp"
-                            android:layout_marginHorizontal="2dp"
-                            android:background="@drawable/shape_dot_active" />
-
-                        <View
-                            android:id="@+id/dot2"
-                            android:layout_width="8dp"
-                            android:layout_height="8dp"
-                            android:layout_marginHorizontal="2dp"
-                            android:background="@drawable/shape_dot_inactive" />
-
-                        <View
-                            android:id="@+id/dot3"
-                            android:layout_width="8dp"
-                            android:layout_height="8dp"
-                            android:layout_marginHorizontal="2dp"
-                            android:background="@drawable/shape_dot_inactive" />
-
-                    </LinearLayout>
-
-                </RelativeLayout>
-
-            </LinearLayout>
+            </FrameLayout>
 
             <!-- Details Container -->
             <LinearLayout
