--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -90,5 +90,7 @@
 
     <color name="accent_color">#FFC72C</color>
 
-
+    <color name="accent_orange">#ff9f43</color>
+    <color name="card_background_light">#FFFFFFFF</color>
+    <color name="card_background_dark">#FF1F2937</color>
 </resources>
