--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -93,4 +93,10 @@
     <color name="accent_orange">#ff9f43</color>
     <color name="card_background_light">#FFFFFFFF</color>
     <color name="card_background_dark">#FF1F2937</color>
+
+    <color name="light_blue_50">#E0F7FA</color>
+    <color name="light_blue_100">#B2EBF2</color>
+    <color name="light_gray_50">#F0F4F8</color>
+    <color name="light_gray_100">#DDE5ED</color>
+    <color name="green_50">#E8F5E9</color>
 </resources>
