--- a/app/src/main/res/layout/activity_customer_home.xml
+++ b/app/src/main/res/layout/activity_customer_home.xml
@@ -368,7 +368,7 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Service"
+                            android:text="My Bikes"
                             android:textColor="@color/text_dark"
                             android:textSize="14sp"
                             android:textStyle="bold"
