--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -101,4 +101,21 @@
     <color name="green_50">#E8F5E9</color>
 
     <color name="icon_orange">#F97316</color>
+
+    <color name="green_500">#22C55E</color>
+    <color name="red_100">#FEE2E2</color>
+    <color name="red_200">#FECACA</color>
+    <color name="red_600">#DC2626</color>
+    <color name="red_800">#991B1B</color>
+
+    <color name="amber_100">#FEF3C7</color>
+    <color name="amber_200">#FDE68A</color>
+    <color name="amber_600">#D97706</color>
+    <color name="amber_800">#92400E</color>
+
+    <color name="green_800">#166534</color>
+
+    <color name="green_100">#DCFCE7</color>
+    <color name="green_200">#BBF7D0</color>
+
 </resources>
